--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+body{
+  overflow-x: hidden;
+}
+
+
+::-webkit-scrollbar {
+  width: 15px;
+  margin: 10px;
+  padding: 10px; 
+}
+
+::-webkit-scrollbar-track {
+  background: black; 
+  border-radius: 5px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, black, #aaa); 
+  border-radius: 5px; 
+  transition: all 0.2s ease-in-out; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to bottom, #888, white); 
 }
